--- a/CWapp/CWapp.csproj
+++ b/CWapp/CWapp.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Castle.Windsor" Version="5.0.0-beta001" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
+    <PackageReference Include="Moq" Version="4.10.0" />
   </ItemGroup>
 
   <ItemGroup>
